--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,34 @@
+button {
+  font-family: BigJohn, sans-serif;
+}
 
+h1, h2 {
+  font-family: BigJohn, sans-serif;
+}
+
+h1 {
+  font-size: 3.6rem;
+  line-height: 4rem;
+  margin-bottom: 2rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+img {
+  height: auto;
+  width: 100%;
+}
+
+p {
+  font-family: Nunito, sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  margin-bottom: 2rem;
+}
+
+.page-container {
+  margin: 100px auto;
+  width: 600px;
+}
