--- a/public/reset.css
+++ b/public/reset.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe,
+html, body, div, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -26,9 +26,6 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
 }
-ol, ul {
-  list-style: none;
-}
 blockquote, q {
   quotes: none;
 }
@@ -40,4 +37,7 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+ul {
+  list-style: none;
 }
