--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,31 @@
+body {
+  color: var(--black);
+}
+
 button {
-  font-family: BigJohn, sans-serif;
+  font-family: Nunito, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
 
 h1, h2 {
-  font-family: BigJohn, sans-serif;
+  font-family: Bitter, serif;
+  text-transform: lowercase;
 }
 
 h1 {
-  font-size: 3.6rem;
-  line-height: 4rem;
-  margin-bottom: 2rem;
+  font-size: 10rem;
+  margin: 0 0 2rem 2rem;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 3.6rem;
+  margin-left: 1rem;
+}
+
+h3 {
+  font-family: Nunito, sans-serif;
+  font-size: 2rem;
 }
 
 img {
@@ -21,14 +33,25 @@ img {
   width: 100%;
 }
 
-p {
+li, p {
   font-family: Nunito, sans-serif;
   font-size: 1.6rem;
   line-height: 2.2rem;
+}
+
+p, ul {
   margin-bottom: 2rem;
 }
 
 .page-container {
   margin: 100px auto;
   width: 600px;
+}
+
+.pink {
+  color: var(--pink);
+}
+
+.purple {
+  color: var(--purple);
 }
