Changed button color to pink for now

--- a/src/Components/Button/style.css
+++ b/src/Components/Button/style.css
@@ -1,5 +1,5 @@
 button {
-  background-color: var(--green);
+  background-color: var(--pink);
   border: none;
   border-radius: 2.5rem;
   color: white;
