Changed all px measurements to rem

--- a/src/Components/Button/style.css
+++ b/src/Components/Button/style.css
@@ -3,7 +3,7 @@ button {
   border: none;
   border-radius: 2.5rem;
   color: white;
-  height: 45px;
-  letter-spacing: .8px;
-  width: 160px;
+  height: 4.5rem;
+  letter-spacing: .08rem;
+  width: 16rem;
 }
