--- a/src/Pages/LandingPage/style.css
+++ b/src/Pages/LandingPage/style.css
@@ -4,7 +4,7 @@
 }
 
 .heading {
-  border-bottom: 1px solid var(--grey);
+  border-bottom: .1rem solid var(--grey);
   margin-bottom: 6rem;
 }
 
@@ -24,24 +24,24 @@
 
 .about-me-background-bottom {
   background-color: var(--cream);
-  bottom: -15px;
-  height: 365px;
+  bottom: -1.5rem;
+  height: 36.5rem;
   opacity: 0.9;
   position: absolute;
   right: 0;
   transform: rotate(-1deg);
-  width: 400px;
+  width: 40rem;
 }
 
 .about-me-background-top {
   background-color: var(--green);
-  bottom: -10px;
-  height: 365px;
+  bottom: -1rem;
+  height: 36.5rem;
   opacity: .3;
   position: absolute;
   right: 0;
   transform: rotate(5deg);
-  width: 400px;
+  width: 40rem;
 }
 
 .about-me-left {
