--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -17,10 +17,9 @@
 .footer a {
   color: white;
   font-size: 1.4rem;
-  text-decoration: none;
 }
 
-.footer a:first-child:after {
-  content: " \007C ";
-  position: relative;
+.footer a:hover,
+.footer a:focus {
+  color: var(--purple);
 }
