--- a/src/Pages/LandingPage/style.css
+++ b/src/Pages/LandingPage/style.css
@@ -31,7 +31,7 @@
 .about-me-background-bottom,
 .about-me-background-top {
   bottom: -1.5rem;
-  height: 36.5rem;
+  height: 35.5rem;
   position: absolute;
   right: 0;
   width: 40rem;
@@ -142,8 +142,12 @@
   padding-left: 3rem;
 }
 
-.skill-list-wrapper h3 {
+.skill-list-wrapper h3,
+.studies-wrapper h3 {
   font-family: Bitter, serif;
+}
+
+.skill-list-wrapper h3 {
   text-transform: lowercase;
 }
 
@@ -175,4 +179,8 @@
   background-color: var(--green);
   opacity: .3;
   transform: rotate(4deg);
+}
+
+.studies-wrapper {
+  margin-top: 3.6rem;
 }
