--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 a {
+  outline: none;
   text-decoration: none;
 }
 
-a:focus {
-  outline: none;
+a:focus, a:hover {
+  text-decoration: underline;
 }
 
 body {
@@ -29,6 +30,14 @@ h2 {
 h3 {
   font-family: Nunito, sans-serif;
   font-size: 2rem;
+}
+
+h4 {
+  color: var(--pink);
+  font-family: Nunito, sans-serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin: .3rem 0 1rem;
 }
 
 img {
