--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h4 {
   color: var(--pink);
   font-family: Nunito, sans-serif;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-style: italic;
   margin: .3rem 0 1rem;
 }
 
