--- a/src/Pages/CasePage/style.css
+++ b/src/Pages/CasePage/style.css
@@ -2,6 +2,15 @@
   margin-bottom: 2rem;
 }
 
+.navigation a {
+  color: #000;
+}
+
+.navigation a:focus,
+.navigation a:hover {
+  color: var(--pink);
+}
+
 .case h1 {
   font-size: 3.6rem;
   line-height: 4rem;
